# cirrus-geo

./: .env  .env.aws.example  .env.localstack.example  .flake8  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  compose.yml  config.yml  core.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-cli.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-lib.txt  requirements.txt  serverless.yml  serverless.yml.example  setup.py  versions.txt
.github/: pull_request_template.md
batch/: basic-compute-environments.yml  iam.yml  jobs.yml
cirrus/: __main__.py  cli.py  commands.py  config.py  constants.py  exceptions.py  project.py  resource.py
cirruslib/: __init__.py  catalog.py  errors.py
cloudformation/: README.md  cirrus-bootstrap.yaml  cirrus-main.yaml  main.yaml  parameters.json
core/: custom-compute-environments.yml  iam.yml  lambdas.yml  resources.yml
docs/: .gitignore  Makefile  architecture.md  conf.py  customize.md  deployment.md  src  stage.py  tutorial-cog-archive.md  tutorial-mirror-with-preview.md  tutorial-mirror.md  tutorial-publish.md  update-versions.py  usage.md  workflows.md
feeders/: lambdas.yml
main/: genindex.html  index.html  objects.inv  search.html  searchindex.js
requirements-in/: 10_requirements.in  20_requirements-cli.in  40_requirements-dev.in  50_requirements-docs.in
tasks/: batch-jobs.yml  lambdas.yml
test/: README.md  test_application.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_init.py  test_process.py  test_statedb.py  test_transfer.py
utils/: fake_workflow_event_generator.py  requirements.txt
v0.10.0/: genindex.html  index.html  objects.inv  search.html
v0.10.1/: genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.11.0/: genindex.html  index.html  objects.inv  search.html
v0.11.1/: genindex.html  index.html  objects.inv  search.html
v0.11.2/: genindex.html  index.html  objects.inv  search.html
v0.11.3/: genindex.html  index.html  objects.inv  search.html
v0.11.4/: genindex.html  index.html  objects.inv  search.html
v0.12.0/: genindex.html  index.html  objects.inv  search.html
v0.12.1/: genindex.html  index.html  objects.inv  search.html
v0.13.0/: genindex.html  index.html  objects.inv  search.html
v0.14.0/: genindex.html  index.html  objects.inv  search.html
v0.15.0/: genindex.html  index.html  objects.inv  search.html
v0.15.1/: genindex.html  index.html  objects.inv  search.html
v0.15.2/: genindex.html  index.html  objects.inv  search.html
v0.15.3/: genindex.html  index.html  objects.inv  search.html
(+1914 files in other folders)
