[project]
name = 'cirrus-geo'
authors = [
    {name = "Matthew Hanson (matthewhanson)"},
    {name = "Jarrett Keifer", email = "jkeifer@element84.com"},
]
description = "AWS-native STAC-based processing pipeline"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "cirrus",
    "stac",
    "workflow",
    "geospatial",
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = [
    'version',
]
dependencies = [
    "boto3",
    "boto3-utils",
    "jsonpath-ng",
    "python-json-logger",
    "stactask>=0.7.0",
]

[project.optional-dependencies]
cli = [
    "backoff",
    "click>=8.2.0",
    "click-option-group",
]

[dependency-groups]
dev = [
    "darglint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "moto>=5",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pre-commit-hooks",
    "pymarkdownlnt",
    "ruff",
    "types-python-dateutil",
]
docs = [
    "sphinx",
    "myst_parser",
    "sphinxcontrib-mermaid",
    "sphinx-click",
    "sphinx-rtd-theme",
]

[project.urls]
Repository = 'https://github.com/cirrus-geo/cirrus-geo'

[project.scripts]
cirrus = 'cirrus.management.__main__:main'

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cirrus/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cirrus"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    'B',
    'BLE',
    'C4',
    'C90',
    'COM',
    'DTZ',
    'E',
    'ERA',
    'F',
    'FA',
    'G',
    'I',
    'INP',
    'N',
    'NPY',
    'PT',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T20',
    'UP',
    'W',

]
exclude = [
    'docs/**/*',
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402']
'tests/management/*' = ['E501']
'tests/**/*' = [
    'T201',
    'S101',
    # TODO: B017 and PT011 _should not_ be ignored, they are serious
    # but it will take some work to get them straightened out
    # https://github.com/cirrus-geo/cirrus-geo/issues/271
    'B017',
    'PT011',
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.pymarkdown]
plugins.md007.enabled = true
plugins.md007.code_block_line_length = 160
plugins.md013.line_length = 88
plugins.md013.heading_line_length = 88
plugins.md013.code_block_line_length = 100
plugins.md024.siblings_only = true
extensions.front-matter.enabled = true

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
